compiler/w_session/tests/errors/return-typecheck.w
fn main(): u32 {
    return 2.1;
    1
}