compiler/w_session/tests/errors/return-typecheck.stderr
tests/errors/return-typecheck.w:2:12: error: type mismatch
    return 2.1;
           ^^^
